Fixing comment size on IE

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -624,6 +624,7 @@ a.prop_link:hover, a.prop_link:active{
 	margin-bottom: 10px;
 	width: 512px;
 	position: relative;
+  min-height: 110px;
 	left: 80px;
 }
 
